add rbi and hr props

--- a/app/templates/covers_style.html
+++ b/app/templates/covers_style.html
@@ -348,8 +348,9 @@
                     <select class="form-select" id="prop-type-filter">
                         <option value="">All Props</option>
                         <option value="To Record A Hit">Hits</option>
-                        <option value="To Record A HR">Home Runs</option>
-                        <option value="To Record An RBI">RBIs</option>
+                        <option value="To Record An RBI">RBI (1+)</option>
+                        <option value="To Record 2+ RBIs">RBI (2+)</option>
+                        <option value="To Hit A Home Run">Home Runs</option>
                     </select>
                 </div>
                 
@@ -385,6 +386,6 @@
         </div>
     </div>
 
-    <script src="/static/covers-dashboard.js"></script>
+    <script src="/static/dashboard.js"></script>
 </body>
 </html> 
